--- a/web-app/package.json
+++ b/web-app/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@ngneat/hot-toast": "^5.0.0",
+    "@ngneat/until-destroy": "^9.2.3",
     "@schematics/angular": "^15.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
